--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,13 +4,26 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build-rust": "wasm-pack build ../dsp",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "d3": "^6.3.1",
     "next": "10.0.4",
-    "prettier": "^2.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.2.1"
   }
 }
