--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build-rust": "wasm-pack build ../dsp",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "yarn prettier --write ./"
   },
   "dependencies": {
     "d3": "^6.3.1",
@@ -16,6 +17,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/d3": "^6.2.0",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
