--- a/dsp/Cargo.toml
+++ b/dsp/Cargo.toml
@@ -18,5 +18,5 @@ web-sys = { version = "0.3.46", features = ['console'] }
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
 
-# [profile.release]
-# opt-level = "s"
+[profile.release]
+opt-level = "s"
