--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "d3": "^6.3.1",
+    "lodash": "^4.17.20",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
